- Updated AdvertisementServiceImpl to correctly associate categories and handle non-authenticated access. - Ensured only one UserNotAuthenticatedException class exists to avoid conflicts. - Enabled method-level security in SecurityConfig with @EnableMethodSecurity.